--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-less": "^3.3.0",
     "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
